@@ -16,20 +16,14 @@
 
 package com.android.adservices.data.enrollment;
 
-import static com.android.adservices.mockito.ExtendedMockitoExpectations.doNothingOnErrorLogUtilError;
-import static com.android.adservices.mockito.ExtendedMockitoExpectations.verifyErrorLogUtilErrorWithAnyException;
+import static com.android.adservices.common.logging.annotations.ExpectErrorLogUtilWithExceptionCall.Any;
+import static com.android.adservices.service.stats.AdServicesStatsLog.AD_SERVICES_ERROR_REPORTED__ERROR_CODE__ENROLLMENT_DATA_DELETE_ERROR;
 import static com.android.adservices.service.stats.AdServicesStatsLog.AD_SERVICES_ERROR_REPORTED__ERROR_CODE__ENROLLMENT_DATA_INSERT_ERROR;
 import static com.android.adservices.service.stats.AdServicesStatsLog.AD_SERVICES_ERROR_REPORTED__PPAPI_NAME__MEASUREMENT;
 
 import static com.google.common.truth.Truth.assertThat;
 import static com.google.common.truth.Truth.assertWithMessage;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
@@ -41,7 +35,6 @@ import static org.mockito.Mockito.when;
 
 import android.adservices.common.AdTechIdentifier;
 import android.adservices.common.CommonFixture;
-import android.content.Context;
 import android.database.DatabaseUtils;
 import android.database.SQLException;
 import android.database.sqlite.SQLiteDatabase;
@@ -49,20 +42,15 @@ import android.database.sqlite.SQLiteException;
 import android.net.Uri;
 import android.util.Pair;
 
-import androidx.test.core.app.ApplicationProvider;
-
 import com.android.adservices.common.AdServicesExtendedMockitoTestCase;
-import com.android.adservices.data.DbTestUtil;
+import com.android.adservices.common.DbTestUtil;
+import com.android.adservices.common.logging.annotations.ExpectErrorLogUtilWithExceptionCall;
 import com.android.adservices.data.shared.SharedDbHelper;
-import com.android.adservices.errorlogging.ErrorLogUtil;
-import com.android.adservices.service.Flags;
 import com.android.adservices.service.enrollment.EnrollmentData;
 import com.android.adservices.service.enrollment.EnrollmentStatus;
 import com.android.adservices.service.enrollment.EnrollmentUtil;
 import com.android.adservices.service.proto.PrivacySandboxApi;
 import com.android.adservices.service.stats.AdServicesLogger;
-import com.android.dx.mockito.inline.extended.ExtendedMockito;
-import com.android.modules.utils.testing.ExtendedMockitoRule.SpyStatic;
 
 import com.google.common.collect.ImmutableList;
 
@@ -78,11 +66,9 @@ import java.util.Set;
 
 public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
-    protected static final Context sContext = ApplicationProvider.getApplicationContext();
     private SharedDbHelper mDbHelper;
     private EnrollmentDao mEnrollmentDao;
 
-    @Mock private Flags mMockFlags;
     @Mock private AdServicesLogger mLogger;
     @Mock private EnrollmentUtil mEnrollmentUtil;
     @Mock private SharedDbHelper mMockDbHelper;
@@ -95,12 +81,22 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                                     + " PRIVACY_SANDBOX_API_TOPICS"
                                     + " PRIVACY_SANDBOX_API_PROTECTED_APP_SIGNALS")
                     .setSdkNames("1sdk")
-                    .setAttributionSourceRegistrationUrl(Arrays.asList("https://1test.com/source"))
-                    .setAttributionTriggerRegistrationUrl(
-                            Arrays.asList("https://1test.com/trigger"))
-                    .setAttributionReportingUrl(Arrays.asList("https://1test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(Arrays.asList("https://1test.com"))
+                    .setAttributionSourceRegistrationUrl(List.of("https://1test.com/source"))
+                    .setAttributionTriggerRegistrationUrl(List.of("https://1test.com/trigger"))
+                    .setAttributionReportingUrl(List.of("https://1test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://1test.com"))
                     .setEncryptionKeyUrl("https://1test.com/keys")
+                    .build();
+
+    public static final EnrollmentData ENROLLMENT_DATA1_API_BASED =
+            new EnrollmentData.Builder()
+                    .setEnrollmentId("1")
+                    .setEnrolledAPIs(
+                            "PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING"
+                                    + " PRIVACY_SANDBOX_API_TOPICS"
+                                    + " PRIVACY_SANDBOX_API_PROTECTED_APP_SIGNALS")
+                    .setSdkNames("1sdk")
+                    .setEnrolledSite("https://1test.com/")
                     .build();
 
     private static final EnrollmentData ENROLLMENT_DATA2 =
@@ -119,9 +115,19 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                             Arrays.asList(
                                     "https://2test.com/trigger",
                                     "https://2test.com/trigger/extra/path"))
-                    .setAttributionReportingUrl(Arrays.asList("https://2test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(Arrays.asList("https://2test.com"))
+                    .setAttributionReportingUrl(List.of("https://2test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://2test.com"))
                     .setEncryptionKeyUrl("https://2test.com/keys")
+                    .build();
+
+    public static final EnrollmentData ENROLLMENT_DATA2_API_BASED =
+            new EnrollmentData.Builder()
+                    .setEnrollmentId("2")
+                    .setEnrolledAPIs(
+                            "PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING"
+                                    + " PRIVACY_SANDBOX_API_PROTECTED_AUDIENCE")
+                    .setSdkNames(Arrays.asList("2sdk", "anotherSdk"))
+                    .setEnrolledSite("https://2test.com")
                     .build();
 
     private static final EnrollmentData ENROLLMENT_DATA3 =
@@ -133,11 +139,20 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                     .setSdkNames("3sdk 31sdk")
                     .setAttributionSourceRegistrationUrl(
                             Arrays.asList("https://2test.com/source", "https://2test2.com/source"))
-                    .setAttributionTriggerRegistrationUrl(
-                            Arrays.asList("https://2test.com/trigger"))
-                    .setAttributionReportingUrl(Arrays.asList("https://2test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(Arrays.asList("https://2test.com"))
+                    .setAttributionTriggerRegistrationUrl(List.of("https://2test.com/trigger"))
+                    .setAttributionReportingUrl(List.of("https://2test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://2test.com"))
                     .setEncryptionKeyUrl("https://2test.com/keys")
+                    .build();
+
+    private static final EnrollmentData ENROLLMENT_DATA3_API_BASED =
+            new EnrollmentData.Builder()
+                    .setEnrollmentId("3")
+                    .setEnrolledAPIs(
+                            "PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING PRIVACY_SANDBOX_API_TOPICS"
+                                    + " PRIVACY_SANDBOX_API_PRIVATE_AGGREGATION")
+                    .setSdkNames("3sdk 31sdk")
+                    .setEncryptionKeyUrl("https://3test.com")
                     .build();
 
     private static final EnrollmentData ENROLLMENT_DATA4 =
@@ -149,10 +164,28 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                     .setSdkNames("4sdk 41sdk")
                     .setAttributionSourceRegistrationUrl(
                             Arrays.asList("https://4test.com", "https://prefix.test-prefix.com"))
-                    .setAttributionTriggerRegistrationUrl(Arrays.asList("https://4test.com"))
-                    .setAttributionReportingUrl(Arrays.asList("https://4test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(Arrays.asList("https://4test.com"))
+                    .setAttributionTriggerRegistrationUrl(List.of("https://4test.com"))
+                    .setAttributionReportingUrl(List.of("https://4test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://4test.com"))
                     .setEncryptionKeyUrl("https://4test.com/keys")
+                    .build();
+
+    private static final EnrollmentData ENROLLMENT_DATA4_API_BASED =
+            new EnrollmentData.Builder()
+                    .setEnrollmentId("4")
+                    .setEnrolledAPIs(
+                            "PRIVACY_SANDBOX_API_PROTECTED_AUDIENCE PRIVACY_SANDBOX_API_TOPICS"
+                                    + " PRIVACY_SANDBOX_API_PROTECTED_APP_SIGNALS")
+                    .setEnrolledSite("https://4test.com")
+                    .build();
+
+    private static final EnrollmentData ENROLLMENT_DATA_LOCAL_API_BASED =
+            new EnrollmentData.Builder()
+                    .setEnrollmentId("4")
+                    .setEnrolledAPIs(
+                            "PRIVACY_SANDBOX_API_PROTECTED_AUDIENCE PRIVACY_SANDBOX_API_TOPICS"
+                                    + " PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
+                    .setEnrolledSite("https://localhost")
                     .build();
 
     private static final EnrollmentData ENROLLMENT_DATA5 =
@@ -169,9 +202,8 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                             Arrays.asList(
                                     "https://us.5test.com/trigger",
                                     "https://port-test.5test3.com:443/trigger"))
-                    .setAttributionReportingUrl(Arrays.asList("https://us.5test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(
-                            Arrays.asList("https://us.5test.com"))
+                    .setAttributionReportingUrl(List.of("https://us.5test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://us.5test.com"))
                     .setEncryptionKeyUrl("https://us.5test.com/keys")
                     .build();
 
@@ -180,11 +212,10 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                     .setEnrollmentId("1")
                     .setEnrolledAPIs("PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
                     .setSdkNames("4sdk")
-                    .setAttributionSourceRegistrationUrl(Arrays.asList("https://4test.com/source"))
-                    .setAttributionTriggerRegistrationUrl(
-                            Arrays.asList("https://4test.com/trigger"))
-                    .setAttributionReportingUrl(Arrays.asList("https://4test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(Arrays.asList("https://4test.com"))
+                    .setAttributionSourceRegistrationUrl(List.of("https://4test.com/source"))
+                    .setAttributionTriggerRegistrationUrl(List.of("https://4test.com/trigger"))
+                    .setAttributionReportingUrl(List.of("https://4test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://4test.com"))
                     .setEncryptionKeyUrl("https://4test.com/keys")
                     .build();
 
@@ -193,10 +224,9 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                     .setEnrollmentId("6")
                     .setEnrolledAPIs("PRIVACY_SANDBOX_API_PROTECTED_AUDIENCE")
                     .setSdkNames("6sdk")
-                    .setAttributionSourceRegistrationUrl(Arrays.asList("https://6test.com/source"))
-                    .setAttributionTriggerRegistrationUrl(
-                            Arrays.asList("https://6test.com/trigger"))
-                    .setAttributionReportingUrl(Arrays.asList("https://6test.com"))
+                    .setAttributionSourceRegistrationUrl(List.of("https://6test.com/source"))
+                    .setAttributionTriggerRegistrationUrl(List.of("https://6test.com/trigger"))
+                    .setAttributionReportingUrl(List.of("https://6test.com"))
                     .setRemarketingResponseBasedRegistrationUrl(
                             Arrays.asList(
                                     CommonFixture.getUri(CommonFixture.VALID_BUYER_1, "")
@@ -213,7 +243,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         when(mEnrollmentUtil.getBuildId()).thenReturn(1);
         mEnrollmentDao =
                 new EnrollmentDao(
-                        sContext,
+                        mContext,
                         mDbHelper,
                         mMockFlags,
                         mMockFlags.isEnableEnrollmentTestSeed(),
@@ -240,7 +270,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentDao spyEnrollmentDao =
                 Mockito.spy(
                         new EnrollmentDao(
-                                sContext,
+                                mContext,
                                 mDbHelper,
                                 mMockFlags,
                                 mMockFlags.isEnableEnrollmentTestSeed(),
@@ -254,18 +284,18 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         mDbHelper.getReadableDatabase(),
                         EnrollmentTables.EnrollmentDataContract.TABLE,
                         null);
-        assertNotEquals(count, 0);
+        assertThat(count).isNotEqualTo(0);
 
         // Check that seeded enrollments are in the table.
         EnrollmentData e = spyEnrollmentDao.getEnrollmentData("E1");
-        assertNotNull(e);
-        assertEquals(e.getSdkNames().get(0), "sdk1");
+        assertThat(e).isNotNull();
+        assertThat(e.getSdkNames().get(0)).isEqualTo("sdk1");
         EnrollmentData e2 = spyEnrollmentDao.getEnrollmentData("E2");
-        assertNotNull(e2);
-        assertEquals(e2.getSdkNames().get(0), "sdk2");
+        assertThat(e2).isNotNull();
+        assertThat(e2.getSdkNames().get(0)).isEqualTo("sdk2");
         EnrollmentData e3 = spyEnrollmentDao.getEnrollmentData("E3");
-        assertNotNull(e3);
-        assertEquals(e3.getSdkNames().get(0), "sdk3");
+        assertThat(e3).isNotNull();
+        assertThat(e3.getSdkNames().get(0)).isEqualTo("sdk3");
         spyEnrollmentDao.deleteAll();
     }
 
@@ -280,7 +310,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         EnrollmentData e = mEnrollmentDao.getEnrollmentData("1");
-        assertEquals(e, ENROLLMENT_DATA1);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA1);
 
         mEnrollmentDao.delete("1");
         verify(mEnrollmentUtil, times(2))
@@ -291,7 +321,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         EnrollmentData e2 = mEnrollmentDao.getEnrollmentData("1");
-        assertNull(e2);
+        assertThat(e2).isNull();
     }
 
     @Test
@@ -303,7 +333,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         mDbHelper.getReadableDatabase(),
                         EnrollmentTables.EnrollmentDataContract.TABLE,
                         null);
-        assertNotEquals(count, 0);
+        assertThat(count).isNotEqualTo(0);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -312,7 +342,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         // Delete the whole table
-        assertTrue(mEnrollmentDao.deleteAll());
+        assertThat(mEnrollmentDao.deleteAll()).isTrue();
         verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -326,33 +356,38 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         mDbHelper.getReadableDatabase(),
                         EnrollmentTables.EnrollmentDataContract.TABLE,
                         null);
-        assertEquals(count, 0);
+        assertThat(count).isEqualTo(0);
 
         // Check unseeded.
-        assertFalse(mEnrollmentDao.isSeeded());
+        assertThat(mEnrollmentDao.isSeeded()).isFalse();
     }
 
     @Test
-    @SpyStatic(ErrorLogUtil.class)
+    @ExpectErrorLogUtilWithExceptionCall(
+            throwable = SQLiteException.class,
+            errorCode = AD_SERVICES_ERROR_REPORTED__ERROR_CODE__ENROLLMENT_DATA_DELETE_ERROR,
+            ppapiName = AD_SERVICES_ERROR_REPORTED__PPAPI_NAME__MEASUREMENT)
     public void testDeleteAllDoesNotThrowException() {
         SharedDbHelper helper = Mockito.mock(SharedDbHelper.class);
+        SQLiteDatabase readDb = mock(SQLiteDatabase.class);
         SQLiteDatabase db = mock(SQLiteDatabase.class);
 
-        ExtendedMockito.doNothing().when(() -> ErrorLogUtil.e(any(), anyInt(), anyInt()));
         EnrollmentDao enrollmentDao =
                 new EnrollmentDao(
-                        sContext,
+                        mContext,
                         helper,
                         mMockFlags,
                         mMockFlags.isEnableEnrollmentTestSeed(),
                         mLogger,
                         mEnrollmentUtil);
         when(helper.safeGetWritableDatabase()).thenReturn(db);
+        when(helper.safeGetReadableDatabase()).thenReturn(readDb);
+
         when(db.delete(eq(EnrollmentTables.EnrollmentDataContract.TABLE), eq(null), eq(null)))
                 .thenThrow(SQLiteException.class);
 
         boolean result = enrollmentDao.deleteAll();
-        assertFalse(result);
+        assertThat(result).isFalse();
     }
 
     @Test
@@ -363,7 +398,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         mDbHelper.getReadableDatabase(),
                         EnrollmentTables.EnrollmentDataContract.TABLE,
                         null);
-        assertNotEquals(0, count);
+        assertThat(count).isNotEqualTo(0);
 
         mEnrollmentDao.overwriteData(Arrays.asList(ENROLLMENT_DATA2, ENROLLMENT_DATA3));
         count =
@@ -371,14 +406,12 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         mDbHelper.getReadableDatabase(),
                         EnrollmentTables.EnrollmentDataContract.TABLE,
                         null);
-        assertEquals(2, count);
-        assertNull(mEnrollmentDao.getEnrollmentData(ENROLLMENT_DATA1.getEnrollmentId()));
-        assertEquals(
-                mEnrollmentDao.getEnrollmentData(ENROLLMENT_DATA2.getEnrollmentId()),
-                ENROLLMENT_DATA2);
-        assertEquals(
-                mEnrollmentDao.getEnrollmentData(ENROLLMENT_DATA3.getEnrollmentId()),
-                ENROLLMENT_DATA3);
+        assertThat(count).isEqualTo(2);
+        assertThat(mEnrollmentDao.getEnrollmentData(ENROLLMENT_DATA1.getEnrollmentId())).isNull();
+        assertThat(mEnrollmentDao.getEnrollmentData(ENROLLMENT_DATA2.getEnrollmentId()))
+                .isEqualTo(ENROLLMENT_DATA2);
+        assertThat(mEnrollmentDao.getEnrollmentData(ENROLLMENT_DATA3.getEnrollmentId()))
+                .isEqualTo(ENROLLMENT_DATA3);
     }
 
     @Test
@@ -391,7 +424,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(true),
                         eq(1));
         EnrollmentData e = mEnrollmentDao.getEnrollmentData("1");
-        assertEquals(e, ENROLLMENT_DATA1);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA1);
     }
 
     @Test
@@ -400,7 +433,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
 
         List<EnrollmentData> enrollmentDataList = mEnrollmentDao.getAllEnrollmentData();
-        assertEquals(2, enrollmentDataList.size());
+        assertThat(enrollmentDataList).hasSize(2);
     }
 
     @Test
@@ -408,7 +441,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         when(mMockFlags.isEnableEnrollmentTestSeed()).thenReturn(true);
         EnrollmentDao enrollmentDao =
                 new EnrollmentDao(
-                        sContext,
+                        mContext,
                         mDbHelper,
                         mMockFlags,
                         mMockFlags.isEnableEnrollmentTestSeed(),
@@ -417,7 +450,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
         for (EnrollmentData enrollmentData : PreEnrolledAdTechForTest.getList()) {
             EnrollmentData e = enrollmentDao.getEnrollmentData(enrollmentData.getEnrollmentId());
-            assertEquals(enrollmentData, e);
+            assertThat(e).isEqualTo(enrollmentData);
         }
         enrollmentDao.deleteAll();
     }
@@ -427,13 +460,13 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         when(mMockFlags.isEnableEnrollmentTestSeed()).thenReturn(false);
         for (EnrollmentData enrollmentData : PreEnrolledAdTechForTest.getList()) {
             EnrollmentData e = mEnrollmentDao.getEnrollmentData(enrollmentData.getEnrollmentId());
-            assertNull(e);
+            assertThat(e).isNull();
         }
     }
 
     @Test
-    public void getEnrollmentDataFromMeasurementUrl_ForOriginMatchAndSameOrigin_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(true);
+    public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndOriginData_isMatch() {
+        // Site based matching should match if the DB has URLs with origins.
         mEnrollmentDao.insert(ENROLLMENT_DATA5);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -462,11 +495,11 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://us.5test.com/trigger"));
 
-        assertEquals(e1, ENROLLMENT_DATA5);
-        assertEquals(e2, ENROLLMENT_DATA5);
-        assertEquals(e3, ENROLLMENT_DATA5);
-        assertEquals(e4, ENROLLMENT_DATA5);
-        assertEquals(e5, ENROLLMENT_DATA5);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e4).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e5).isEqualTo(ENROLLMENT_DATA5);
         verify(mEnrollmentUtil, times(5))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -477,66 +510,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
     }
 
     @Test
-    public void getEnrollmentDataFromMeasurementUrl_ForOriginMatchAndSamePort_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(true);
-        mEnrollmentDao.insert(ENROLLMENT_DATA5);
-        verify(mEnrollmentUtil, times(1))
-                .logEnrollmentDataStats(
-                        eq(mLogger),
-                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
-                        eq(true),
-                        eq(1));
-
-        EnrollmentData e1 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://port-test.5test3.com:443/source"));
-        EnrollmentData e2 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://port-test.5test3.com:443/trigger"));
-
-        assertEquals(e1, ENROLLMENT_DATA5);
-        assertEquals(e2, ENROLLMENT_DATA5);
-        verify(mEnrollmentUtil, times(2))
-                .logEnrollmentDataStats(
-                        eq(mLogger),
-                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
-                        eq(true),
-                        eq(1));
-        verify(mEnrollmentUtil, times(2)).logEnrollmentMatchStats(eq(mLogger), eq(true), eq(1));
-    }
-
-    @Test
-    public void getEnrollmentDataFromMeasurementUrl_ForOriginMatchAndDifferentPort_isNotMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(true);
-        mEnrollmentDao.insert(ENROLLMENT_DATA5);
-        verify(mEnrollmentUtil, times(1))
-                .logEnrollmentDataStats(
-                        eq(mLogger),
-                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
-                        eq(true),
-                        eq(1));
-
-        EnrollmentData e1 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://port-test.5test3.com:8080/source"));
-        EnrollmentData e2 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://port-test.5test3.com:8080/trigger"));
-
-        assertNull(e1);
-        assertNull(e2);
-        verify(mEnrollmentUtil, times(2))
-                .logEnrollmentDataStats(
-                        eq(mLogger),
-                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
-                        eq(true),
-                        eq(1));
-        verify(mEnrollmentUtil, times(2)).logEnrollmentMatchStats(eq(mLogger), eq(false), eq(1));
-    }
-
-    @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndAnyPort_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA5);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -558,10 +532,10 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://5test3.com/source"));
 
-        assertEquals(e1, ENROLLMENT_DATA5);
-        assertEquals(e2, ENROLLMENT_DATA5);
-        assertEquals(e3, ENROLLMENT_DATA5);
-        assertEquals(e4, ENROLLMENT_DATA5);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA5);
+        assertThat(e4).isEqualTo(ENROLLMENT_DATA5);
         verify(mEnrollmentUtil, times(4))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -572,47 +546,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
     }
 
     @Test
-    public void
-            getEnrollmentDataFromMeasurementUrl_ForOriginMatchAndDifferentOriginUri_isNotMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(true);
-        mEnrollmentDao.insert(ENROLLMENT_DATA5);
-        verify(mEnrollmentUtil, times(1))
-                .logEnrollmentDataStats(
-                        eq(mLogger),
-                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
-                        eq(true),
-                        eq(1));
-        EnrollmentData e1 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://eu.5test.com/source"));
-
-        EnrollmentData e2 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(Uri.parse("https://5test.com"));
-
-        EnrollmentData e3 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://eu.5test2.com"));
-
-        EnrollmentData e4 =
-                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
-                        Uri.parse("https://eu.5test.com/trigger"));
-
-        assertNull(e1);
-        assertNull(e2);
-        assertNull(e3);
-        assertNull(e4);
-        verify(mEnrollmentUtil, times(4))
-                .logEnrollmentDataStats(
-                        eq(mLogger),
-                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
-                        eq(true),
-                        eq(1));
-        verify(mEnrollmentUtil, times(4)).logEnrollmentMatchStats(eq(mLogger), eq(false), eq(1));
-    }
-
-    @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndSameSiteUri_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -623,17 +557,17 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/source"));
-        assertEquals(e1, ENROLLMENT_DATA2);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test2.com/source"));
-        assertEquals(e2, ENROLLMENT_DATA2);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/trigger"));
-        assertEquals(e3, ENROLLMENT_DATA2);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(3))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -645,7 +579,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndSameETLD_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -656,17 +589,17 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.2test.com/source"));
-        assertEquals(e1, ENROLLMENT_DATA2);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.2test2.com/source"));
-        assertEquals(e2, ENROLLMENT_DATA2);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.2test.com/trigger"));
-        assertEquals(e3, ENROLLMENT_DATA2);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(3))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -678,7 +611,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndSamePath_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -695,8 +627,8 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/trigger"));
 
-        assertEquals(e1, ENROLLMENT_DATA2);
-        assertEquals(e2, ENROLLMENT_DATA2);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -708,7 +640,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndIncompletePath_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -720,19 +651,19 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/so"));
-        assertEquals(e, ENROLLMENT_DATA2);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA2);
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test2.com/so"));
-        assertEquals(e2, ENROLLMENT_DATA2);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2);
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/tri"));
-        assertEquals(e3, ENROLLMENT_DATA2);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA2);
         EnrollmentData e4 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/trigger/extra"));
-        assertEquals(e4, ENROLLMENT_DATA2);
+        assertThat(e4).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(4))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -744,7 +675,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndExtraPath_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -756,22 +686,22 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/source/viewId/123"));
-        assertEquals(e1, ENROLLMENT_DATA2);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test2.com/source/viewId/123"));
-        assertEquals(e2, ENROLLMENT_DATA2);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/trigger/clickId/123"));
-        assertEquals(e3, ENROLLMENT_DATA2);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA2);
 
         EnrollmentData e4 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.com/trigger/extra/path/clickId/123"));
-        assertEquals(e4, ENROLLMENT_DATA2);
+        assertThat(e4).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(4))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -783,7 +713,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndDifferentUri_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA4);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -795,17 +724,17 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://4test.com/path"));
-        assertEquals(e1, ENROLLMENT_DATA4);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA4);
 
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.test-prefix.com/path"));
-        assertEquals(e2, ENROLLMENT_DATA4);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA4);
 
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://test-prefix.com/path"));
-        assertEquals(e3, ENROLLMENT_DATA4);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA4);
         verify(mEnrollmentUtil, times(3))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -817,18 +746,16 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndOneUrlInEnrollment_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         EnrollmentData data =
                 new EnrollmentData.Builder()
                         .setEnrollmentId("5")
                         .setEnrolledAPIs("PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
                         .setSdkNames("5sdk 51sdk")
                         .setAttributionSourceRegistrationUrl(
-                                Arrays.asList("https://prefix.test-prefix.com"))
-                        .setAttributionTriggerRegistrationUrl(Arrays.asList("https://5test.com"))
-                        .setAttributionReportingUrl(Arrays.asList("https://5test.com"))
-                        .setRemarketingResponseBasedRegistrationUrl(
-                                Arrays.asList("https://5test.com"))
+                                List.of("https://prefix.test-prefix.com"))
+                        .setAttributionTriggerRegistrationUrl(List.of("https://5test.com"))
+                        .setAttributionReportingUrl(List.of("https://5test.com"))
+                        .setRemarketingResponseBasedRegistrationUrl(List.of("https://5test.com"))
                         .setEncryptionKeyUrl("https://5test.com/keys")
                         .build();
         mEnrollmentDao.insert(data);
@@ -842,17 +769,17 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.test-prefix.com"));
-        assertEquals(e1, data);
+        assertThat(e1).isEqualTo(data);
 
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://another-prefix.prefix.test-prefix.com"));
-        assertEquals(e2, data);
+        assertThat(e2).isEqualTo(data);
 
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.test-prefix.com/path"));
-        assertEquals(e3, data);
+        assertThat(e3).isEqualTo(data);
         verify(mEnrollmentUtil, times(3))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -864,7 +791,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndDiffSchemeUrl_matchesScheme() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         EnrollmentData data =
                 new EnrollmentData.Builder()
                         .setEnrollmentId("4")
@@ -872,10 +798,9 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         .setSdkNames("4sdk 41sdk")
                         .setAttributionSourceRegistrationUrl(
                                 Arrays.asList("http://4test.com", "https://prefix.test-prefix.com"))
-                        .setAttributionTriggerRegistrationUrl(Arrays.asList("https://4test.com"))
-                        .setAttributionReportingUrl(Arrays.asList("https://4test.com"))
-                        .setRemarketingResponseBasedRegistrationUrl(
-                                Arrays.asList("https://4test.com"))
+                        .setAttributionTriggerRegistrationUrl(List.of("https://4test.com"))
+                        .setAttributionReportingUrl(List.of("https://4test.com"))
+                        .setRemarketingResponseBasedRegistrationUrl(List.of("https://4test.com"))
                         .setEncryptionKeyUrl("https://4test.com/keys")
                         .build();
         mEnrollmentDao.insert(data);
@@ -889,7 +814,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://prefix.test-prefix.com"));
-        assertEquals(e1, data);
+        assertThat(e1).isEqualTo(data);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -901,7 +826,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndSameSubdomainChild_isMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA4);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -913,12 +837,12 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://test-prefix.com"));
-        assertEquals(e, ENROLLMENT_DATA4);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA4);
 
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://other-prefix.test-prefix.com"));
-        assertEquals(e1, ENROLLMENT_DATA4);
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA4);
         verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -930,7 +854,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndDifferentDomain_doesNotMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -942,11 +865,11 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://abc2test.com/source"));
-        assertNull(e);
+        assertThat(e).isNull();
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://abc2test.com/trigger"));
-        assertNull(e1);
+        assertThat(e1).isNull();
         verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -958,7 +881,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndDifferentScheme_doesNotMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -970,11 +892,11 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("http://2test.com/source"));
-        assertNull(e);
+        assertThat(e).isNull();
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("http://2test.com/trigger"));
-        assertNull(e1);
+        assertThat(e1).isNull();
         verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -986,7 +908,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndDifferentETld_doesNotMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -998,15 +919,15 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(Uri.parse("https://2test.co"));
 
-        assertNull(e);
+        assertThat(e).isNull();
         EnrollmentData e2 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.co/source"));
-        assertNull(e2);
+        assertThat(e2).isNull();
         EnrollmentData e3 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://2test.co/trigger"));
-        assertNull(e3);
+        assertThat(e3).isNull();
         verify(mEnrollmentUtil, times(3))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -1018,7 +939,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
     @Test
     public void getEnrollmentDataFromMeasurementUrl_ForSiteMatchAndInvalidPublicSuffix_isNoMatch() {
-        when(mMockFlags.getEnforceEnrollmentOriginMatch()).thenReturn(false);
         mEnrollmentDao.insert(ENROLLMENT_DATA4);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
@@ -1030,7 +950,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://4test.invalid"));
-        assertNull(e);
+        assertThat(e).isNull();
         verifyZeroInteractions(mLogger);
 
         EnrollmentData enrollmentData =
@@ -1038,12 +958,11 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         .setEnrollmentId("4")
                         .setEnrolledAPIs("PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
                         .setSdkNames("4sdk 41sdk")
-                        .setAttributionSourceRegistrationUrl(Arrays.asList("https://4test.invalid"))
-                        .setAttributionTriggerRegistrationUrl(
-                                Arrays.asList("https://4test.invalid"))
-                        .setAttributionReportingUrl(Arrays.asList("https://4test.invalid"))
+                        .setAttributionSourceRegistrationUrl(List.of("https://4test.invalid"))
+                        .setAttributionTriggerRegistrationUrl(List.of("https://4test.invalid"))
+                        .setAttributionReportingUrl(List.of("https://4test.invalid"))
                         .setRemarketingResponseBasedRegistrationUrl(
-                                Arrays.asList("https://4test.invalid"))
+                                List.of("https://4test.invalid"))
                         .setEncryptionKeyUrl("https://4test.invalid/keys")
                         .build();
         mEnrollmentDao.insert(enrollmentData);
@@ -1057,7 +976,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         EnrollmentData e1 =
                 mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
                         Uri.parse("https://4test.invalid"));
-        assertNull(e1);
+        assertThat(e1).isNull();
         verifyZeroInteractions(mLogger);
     }
 
@@ -1074,7 +993,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         AdTechIdentifier adtechIdentifier = AdTechIdentifier.fromString("2test.com", false);
         EnrollmentData e =
                 mEnrollmentDao.getEnrollmentDataForFledgeByAdTechIdentifier(adtechIdentifier);
-        assertEquals(e, ENROLLMENT_DATA2);
+        assertWithMessage("Found enrollment").that(e).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(1))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -1185,6 +1104,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         Pair<AdTechIdentifier, EnrollmentData> enrollmentResult =
                 mEnrollmentDao.getEnrollmentDataForFledgeByMatchingAdTechIdentifier(exactMatchUri);
 
+        assertThat(enrollmentResult).isNotNull();
         assertWithMessage("Returned EnrollmentData")
                 .that(enrollmentResult.second)
                 .isEqualTo(ENROLLMENT_DATA_MULTIPLE_FLEDGE_RBR);
@@ -1218,6 +1138,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                 mEnrollmentDao.getEnrollmentDataForFledgeByMatchingAdTechIdentifier(
                         subdomainMatchUri);
 
+        assertThat(enrollmentResult).isNotNull();
         assertWithMessage("Returned EnrollmentData")
                 .that(enrollmentResult.second)
                 .isEqualTo(ENROLLMENT_DATA_MULTIPLE_FLEDGE_RBR);
@@ -1266,9 +1187,9 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         EnrollmentData e = mEnrollmentDao.getEnrollmentDataFromSdkName("2sdk");
-        assertEquals(e, ENROLLMENT_DATA2);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA2);
         EnrollmentData e2 = mEnrollmentDao.getEnrollmentDataFromSdkName("anotherSdk");
-        assertEquals(e2, ENROLLMENT_DATA2);
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2);
         verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -1286,7 +1207,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         EnrollmentData e3 = mEnrollmentDao.getEnrollmentDataFromSdkName("31sdk");
-        assertEquals(e3, ENROLLMENT_DATA3);
+        assertThat(e3).isEqualTo(ENROLLMENT_DATA3);
         verify(mEnrollmentUtil, times(3))
                 .logEnrollmentDataStats(
                         eq(mLogger),
@@ -1307,7 +1228,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         EnrollmentData e = mEnrollmentDao.getEnrollmentData("1");
-        assertEquals(ENROLLMENT_DATA1, e);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA1);
 
         mEnrollmentDao.insert(DUPLICATE_ID_ENROLLMENT_DATA);
         verify(mEnrollmentUtil, times(2))
@@ -1318,7 +1239,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         e = mEnrollmentDao.getEnrollmentData("1");
-        assertEquals(DUPLICATE_ID_ENROLLMENT_DATA, e);
+        assertThat(e).isEqualTo(DUPLICATE_ID_ENROLLMENT_DATA);
     }
 
     @Test
@@ -1335,7 +1256,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                         eq(1));
 
         int enrollmentRecordsCount = mEnrollmentDao.getEnrollmentRecordCountForLogging();
-        assertEquals(enrollmentRecordsCount, 3);
+        assertThat(enrollmentRecordsCount).isEqualTo(3);
     }
 
     @Test
@@ -1345,14 +1266,14 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         mEnrollmentDao.insert(ENROLLMENT_DATA3);
         when(mMockFlags.getEnrollmentEnableLimitedLogging()).thenReturn(true);
         int enrollmentRecordsCount = mEnrollmentDao.getEnrollmentRecordCountForLogging();
-        assertEquals(-2, enrollmentRecordsCount);
+        assertThat(enrollmentRecordsCount).isEqualTo(-2);
     }
 
     @Test
     public void testGetEnrollmentRecordsCountForLogging_databaseError() {
         EnrollmentDao enrollmentDao =
                 new EnrollmentDao(
-                        sContext,
+                        mContext,
                         mMockDbHelper,
                         mMockFlags,
                         mMockFlags.isEnableEnrollmentTestSeed(),
@@ -1364,16 +1285,17 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         when(mMockFlags.getEnrollmentEnableLimitedLogging()).thenReturn(false);
         when(mMockDbHelper.safeGetWritableDatabase()).thenReturn(null);
         int enrollmentRecordsCount = enrollmentDao.getEnrollmentRecordCountForLogging();
-        assertEquals(-1, enrollmentRecordsCount);
+        assertThat(enrollmentRecordsCount).isEqualTo(-1);
     }
 
     @Test
-    @SpyStatic(ErrorLogUtil.class)
-    public void testInsert_throwsSQLException_logsCEL() throws Exception {
+    @ExpectErrorLogUtilWithExceptionCall(
+            throwable = Any.class,
+            errorCode = AD_SERVICES_ERROR_REPORTED__ERROR_CODE__ENROLLMENT_DATA_INSERT_ERROR,
+            ppapiName = AD_SERVICES_ERROR_REPORTED__PPAPI_NAME__MEASUREMENT)
+    public void testInsert_throwsSQLException_logsCEL() {
         SQLiteDatabase db = mock(SQLiteDatabase.class);
         EnrollmentData enrollmentData = mock(EnrollmentData.class);
-
-        doNothingOnErrorLogUtilError();
 
         when(mMockDbHelper.safeGetWritableDatabase()).thenReturn(db);
         when(db.insertWithOnConflict(
@@ -1381,10 +1303,6 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
                 .thenThrow(new SQLException());
 
         assertThat(mEnrollmentDao.insert(enrollmentData)).isFalse();
-
-        verifyErrorLogUtilErrorWithAnyException(
-                AD_SERVICES_ERROR_REPORTED__ERROR_CODE__ENROLLMENT_DATA_INSERT_ERROR,
-                AD_SERVICES_ERROR_REPORTED__PPAPI_NAME__MEASUREMENT);
     }
 
     @Test
@@ -1393,33 +1311,35 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         mEnrollmentDao.insert(ENROLLMENT_DATA3);
         // Checking ENROLLMENT_DATA2
         EnrollmentData enrollmentData2 = mEnrollmentDao.getEnrollmentData("2");
+        assertThat(enrollmentData2).isNotNull();
 
         String enrolledAPIsString2 =
                 "PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING"
                         + " PRIVACY_SANDBOX_API_PROTECTED_AUDIENCE";
-        assertEquals(enrolledAPIsString2, enrollmentData2.getEnrolledAPIsString());
+        assertThat(enrollmentData2.getEnrolledAPIsString()).isEqualTo(enrolledAPIsString2);
 
         List<PrivacySandboxApi> enrolledAPIs2 =
                 ImmutableList.of(
                         PrivacySandboxApi.PRIVACY_SANDBOX_API_PROTECTED_AUDIENCE,
                         PrivacySandboxApi.PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING);
-        assertEquals(2, enrollmentData2.getEnrolledAPIs().size());
+        assertThat(enrollmentData2.getEnrolledAPIs()).hasSize(2);
         assertThat(enrollmentData2.getEnrolledAPIs()).containsExactlyElementsIn(enrolledAPIs2);
 
         // Checking ENROLLMENT_DATA3
         EnrollmentData enrollmentData3 = mEnrollmentDao.getEnrollmentData("3");
+        assertThat(enrollmentData3).isNotNull();
 
         String enrolledAPIsString3 =
                 "PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING PRIVACY_SANDBOX_API_TOPICS"
                         + " PRIVACY_SANDBOX_API_PRIVATE_AGGREGATION";
-        assertEquals(enrolledAPIsString3, enrollmentData3.getEnrolledAPIsString());
+        assertThat(enrollmentData3.getEnrolledAPIsString()).isEqualTo(enrolledAPIsString3);
 
         List<PrivacySandboxApi> enrolledAPIs3 =
                 ImmutableList.of(
                         PrivacySandboxApi.PRIVACY_SANDBOX_API_TOPICS,
                         PrivacySandboxApi.PRIVACY_SANDBOX_API_PRIVATE_AGGREGATION,
                         PrivacySandboxApi.PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING);
-        assertEquals(3, enrollmentData3.getEnrolledAPIs().size());
+        assertThat(enrollmentData3.getEnrolledAPIs()).hasSize(3);
         assertThat(enrollmentData3.getEnrolledAPIs()).containsExactlyElementsIn(enrolledAPIs3);
     }
 
@@ -1437,9 +1357,9 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         Pair<AdTechIdentifier, EnrollmentData> paired =
                 mEnrollmentDao.getEnrollmentDataForPASByMatchingAdTechIdentifier(
                         Uri.parse("https://4test.com/"));
-
-        assertEquals(paired.first, AdTechIdentifier.fromString("4test.com"));
-        assertEquals(paired.second, ENROLLMENT_DATA4);
+        assertThat(paired).isNotNull();
+        assertThat(paired.first).isEqualTo(AdTechIdentifier.fromString("4test.com"));
+        assertThat(paired.second).isEqualTo(ENROLLMENT_DATA4);
     }
 
     @Test
@@ -1472,9 +1392,9 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
         Pair<AdTechIdentifier, EnrollmentData> enrollmentResult =
                 mEnrollmentDao.getEnrollmentDataForPASByMatchingAdTechIdentifier(subdomainMatchUri);
-
-        assertEquals(enrollmentResult.first, AdTechIdentifier.fromString("4test.com"));
-        assertEquals(enrollmentResult.second, ENROLLMENT_DATA4);
+        assertThat(enrollmentResult).isNotNull();
+        assertThat(enrollmentResult.first).isEqualTo(AdTechIdentifier.fromString("4test.com"));
+        assertThat(enrollmentResult.second).isEqualTo(ENROLLMENT_DATA4);
     }
 
     @Test
@@ -1520,7 +1440,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         AdTechIdentifier adTechIdentifier = AdTechIdentifier.fromString("1test.com");
         EnrollmentData enrollmentResult =
                 mEnrollmentDao.getEnrollmentDataForPASByAdTechIdentifier(adTechIdentifier);
-        assertEquals(ENROLLMENT_DATA1, enrollmentResult);
+        assertThat(enrollmentResult).isEqualTo(ENROLLMENT_DATA1);
     }
 
     @Test
@@ -1535,7 +1455,7 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
         AdTechIdentifier adTechIdentifier = AdTechIdentifier.fromString("2test.com");
         EnrollmentData enrollmentResult =
                 mEnrollmentDao.getEnrollmentDataForPASByAdTechIdentifier(adTechIdentifier);
-        assertNull(enrollmentResult);
+        assertThat(enrollmentResult).isNull();
     }
 
     @Test
@@ -1583,6 +1503,405 @@ public final class EnrollmentDaoTest extends AdServicesExtendedMockitoTestCase {
 
         assertThat(enrolledPASAdTechIdentifiers).isEmpty();
         verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+    }
+
+    @Test
+    public void getAllPASEnrolledAdTechs_multipleEntries_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA1_API_BASED);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        mEnrollmentDao.insert(ENROLLMENT_DATA3_API_BASED);
+        mEnrollmentDao.insert(ENROLLMENT_DATA4_API_BASED);
+        verify(mEnrollmentUtil, times(4))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+
+        Set<AdTechIdentifier> enrolledPASAdTechIdentifiers =
+                mEnrollmentDao.getAllPASEnrolledAdTechs();
+
+        assertThat(enrolledPASAdTechIdentifiers).hasSize(2);
+        assertThat(enrolledPASAdTechIdentifiers)
+                .containsExactly(
+                        AdTechIdentifier.fromString("1test.com"),
+                        AdTechIdentifier.fromString("4test.com"));
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataForAPIByUrl_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA1_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+
+        EnrollmentData enrollmentData =
+                mEnrollmentDao.getEnrollmentDataForAPIByUrl(
+                        Uri.parse("https://abc.example.1test.com"),
+                        PrivacySandboxApi.PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING);
+
+        assertThat(enrollmentData).isEqualTo(ENROLLMENT_DATA1_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+    }
+
+    @Test
+    public void testGetEnrollmentDataForFledgeByAdTechIdentifier_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+
+        AdTechIdentifier adtechIdentifier = AdTechIdentifier.fromString("2test.com", false);
+        EnrollmentData e =
+                mEnrollmentDao.getEnrollmentDataForFledgeByAdTechIdentifier(adtechIdentifier);
+        assertThat(e).isEqualTo(ENROLLMENT_DATA2_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(1)).logEnrollmentMatchStats(eq(mLogger), eq(true), eq(1));
+    }
+
+    @Test
+    public void getAllEnrollmentDataByAPI_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA1_API_BASED);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        mEnrollmentDao.insert(ENROLLMENT_DATA3_API_BASED);
+        mEnrollmentDao.insert(ENROLLMENT_DATA4_API_BASED);
+        verify(mEnrollmentUtil, times(4))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+
+        List<EnrollmentData> enrollmentDataList =
+                mEnrollmentDao.getAllEnrollmentDataByAPI(
+                        PrivacySandboxApi.PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING);
+
+        assertThat(enrollmentDataList).hasSize(3);
+        assertThat(enrollmentDataList)
+                .containsExactly(
+                        ENROLLMENT_DATA1_API_BASED,
+                        ENROLLMENT_DATA2_API_BASED,
+                        ENROLLMENT_DATA3_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://2test.com/source"));
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2_API_BASED);
+
+        EnrollmentData e2 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://2test.com/trigger"));
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2_API_BASED);
+
+        verify(mEnrollmentUtil, times(2))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(2)).logEnrollmentMatchStats(eq(mLogger), eq(true), eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_fullOriginPath_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://example.2test.com/source"));
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2_API_BASED);
+
+        EnrollmentData e2 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://example.2test.com/trigger"));
+        assertThat(e2).isEqualTo(ENROLLMENT_DATA2_API_BASED);
+
+        verify(mEnrollmentUtil, times(2))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(2)).logEnrollmentMatchStats(eq(mLogger), eq(true), eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_noMatchFound_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://3test.com/source"));
+        assertThat(e1).isNull();
+
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(1)).logEnrollmentMatchStats(eq(mLogger), eq(false), eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_upperUri_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://2TEST.com/source"));
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA2_API_BASED);
+
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(1)).logEnrollmentMatchStats(eq(mLogger), eq(true), eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_uriWithPort_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA_LOCAL_API_BASED);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://localhost:8383"));
+        assertThat(e1).isEqualTo(ENROLLMENT_DATA_LOCAL_API_BASED);
+
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(1)).logEnrollmentMatchStats(eq(mLogger), eq(true), eq(1));
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_urlPrefix_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        EnrollmentData data =
+                new EnrollmentData.Builder()
+                        .setEnrollmentId("5")
+                        .setEnrolledAPIs("PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
+                        .setSdkNames("5sdk 51sdk")
+                        .setEnrolledSite("https://prefix_host.com")
+                        .build();
+        mEnrollmentDao.insert(data);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(Uri.parse("https://prefix.com"));
+        assertThat(e1).isNull();
+    }
+
+    @Test
+    public void getEnrollmentDataFromMeasurementUrl_enrollmentPrefix_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        EnrollmentData data =
+                new EnrollmentData.Builder()
+                        .setEnrollmentId("5")
+                        .setEnrolledAPIs("PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
+                        .setSdkNames("5sdk 51sdk")
+                        .setEnrolledSite("https://prefix.com")
+                        .build();
+        mEnrollmentDao.insert(data);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://prefix_host.com"));
+        assertThat(e1).isNull();
+    }
+
+    @Test
+    public void
+            getEnrollmentDataFromMeasurementUrl_uriWithSubdomainPrefix_enrollmentApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        EnrollmentData data =
+                new EnrollmentData.Builder()
+                        .setEnrollmentId("5")
+                        .setEnrolledAPIs("PRIVACY_SANDBOX_API_ATTRIBUTION_REPORTING")
+                        .setSdkNames("5sdk 51sdk")
+                        .setEnrolledSite("https://my_prefix.com")
+                        .build();
+        mEnrollmentDao.insert(data);
+        verify(mEnrollmentUtil, times(1))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        EnrollmentData e1 =
+                mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(
+                        Uri.parse("https://my_prefix.site.com "));
+        assertThat(e1).isNull();
+    }
+
+    @Test
+    public void
+            getEnrollmentDataForFledgeByMatchingAdTechIdentifier_disableToEnableApiBasedSchema() {
+        mEnrollmentDao.insert(ENROLLMENT_DATA2);
+
+        Pair<AdTechIdentifier, EnrollmentData> enrollmentResult =
+                mEnrollmentDao.getEnrollmentDataForFledgeByMatchingAdTechIdentifier(
+                        Uri.parse("https://example.2test.com/path/to/resource"));
+        assertThat(enrollmentResult).isNotNull();
+        assertWithMessage("Returned EnrollmentData")
+                .that(enrollmentResult.second)
+                .isEqualTo(ENROLLMENT_DATA2);
+        assertWithMessage("Returned AdTechIdentifier")
+                .that(enrollmentResult.first)
+                .isEqualTo(AdTechIdentifier.fromString("2test.com"));
+
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA2_API_BASED);
+
+        Pair<AdTechIdentifier, EnrollmentData> enrollmentResultAPIBased =
+                mEnrollmentDao.getEnrollmentDataForFledgeByMatchingAdTechIdentifier(
+                        Uri.parse("https://example.2test.com/path/to/resource"));
+        assertThat(enrollmentResultAPIBased).isNotNull();
+        assertWithMessage("Returned EnrollmentData")
+                .that(enrollmentResultAPIBased.second)
+                .isEqualTo(ENROLLMENT_DATA2_API_BASED);
+        assertWithMessage("Returned AdTechIdentifier")
+                .that(enrollmentResultAPIBased.first)
+                .isEqualTo(AdTechIdentifier.fromString("2test.com"));
+
+        verify(mEnrollmentUtil, times(2))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(2))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+    }
+
+    @Test
+    public void
+            getEnrollmentDataForFledgeByMatchingAdTechIdentifier_enableToDisableApiBasedSchema() {
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(true);
+        mEnrollmentDao.insert(ENROLLMENT_DATA4_API_BASED);
+
+        Pair<AdTechIdentifier, EnrollmentData> enrollmentResultAPIBased =
+                mEnrollmentDao.getEnrollmentDataForFledgeByMatchingAdTechIdentifier(
+                        Uri.parse("https://example.4test.com/path/to/resource"));
+        assertThat(enrollmentResultAPIBased).isNotNull();
+        assertWithMessage("Returned EnrollmentData")
+                .that(enrollmentResultAPIBased.second)
+                .isEqualTo(ENROLLMENT_DATA4_API_BASED);
+        assertWithMessage("Returned AdTechIdentifier")
+                .that(enrollmentResultAPIBased.first)
+                .isEqualTo(AdTechIdentifier.fromString("4test.com"));
+
+        when(mMockFlags.getEnrollmentApiBasedSchemaEnabled()).thenReturn(false);
+        mEnrollmentDao.insert(ENROLLMENT_DATA4);
+
+        Pair<AdTechIdentifier, EnrollmentData> enrollmentResult =
+                mEnrollmentDao.getEnrollmentDataForFledgeByMatchingAdTechIdentifier(
+                        Uri.parse("https://example.4test.com/path/to/resource"));
+        assertThat(enrollmentResult).isNotNull();
+        assertWithMessage("Returned EnrollmentData")
+                .that(enrollmentResult.second)
+                .isEqualTo(ENROLLMENT_DATA4);
+        assertWithMessage("Returned AdTechIdentifier")
+                .that(enrollmentResult.first)
+                .isEqualTo(AdTechIdentifier.fromString("4test.com"));
+
+        verify(mEnrollmentUtil, times(2))
+                .logEnrollmentDataStats(
+                        eq(mLogger),
+                        eq(EnrollmentStatus.TransactionType.WRITE_TRANSACTION_TYPE.getValue()),
+                        eq(true),
+                        eq(1));
+        verify(mEnrollmentUtil, times(2))
                 .logEnrollmentDataStats(
                         eq(mLogger),
                         eq(EnrollmentStatus.TransactionType.READ_TRANSACTION_TYPE.getValue()),
